--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -3,47 +3,71 @@
     package="ingsw.msdetector"
     android:versionCode="1"
     android:versionName="1.0" >
+    
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true"/>
 
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
-
+    
+   
+    <uses-permission android:name="android.permission.INTERNET"/>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+   
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <meta-data
+    android:name="com.google.android.maps.v2.AIzaSyAX0HnY39NesjoEpQU8gfHhh9FQPGR_q1U"
+    android:value="AIzaSyAX0HnY39NesjoEpQU8gfHhh9FQPGR_q1U"/>
+    
+    <meta-data
+    android:name="com.google.android.gms.version"
+    android:value="@integer/google_play_services_version" />
+        
         <activity
             android:name="ingsw.msdetector.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-             android:name="ingsw.msdetector.PlaceHolderActivity"
-             android:label="@string/segnaposti">
-        </activity>
-        <activity 
             android:name="ingsw.msdetector.FormActivity"
             android:label="@string/schede_funghi">
         </activity>
-        <activity 
-            android:name="ingsw.msdetector.LoginActivity"  
+        <activity
+            android:name="ingsw.msdetector.LoginActivity"
             android:label="@string/login">
         </activity>
-         <activity 
-            android:name="ingsw.msdetector.RecipeActivity"  
-            android:label="@string/recipe">
-        </activity>
-        <activity 
-            android:name="ingsw.msdetector.TraceActivity"  
-            android:label="@string/trace">
-        </activity>
-        <activity 
-            android:name="ingsw.msdetector.MapsActivity"  
+        <activity
+            android:name="ingsw.msdetector.MapsActivity"
             android:label="@string/mappe">
         </activity>
+        <activity
+            android:name="ingsw.msdetector.PlaceHolderActivity"
+            android:label="@string/segnaposti">
+        </activity>
+        <activity
+            android:name="ingsw.msdetector.RecipeActivity"
+            android:label="@string/recipe">
+        </activity>
+        <activity
+            android:name="ingsw.msdetector.TraceActivity"
+            android:label="@string/trace">
+        </activity>
+        
     </application>
+
 </manifest>
