--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
     
-   
+    
     <uses-permission android:name="android.permission.INTERNET"/>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
@@ -27,8 +27,8 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <meta-data
-    android:name="com.google.android.maps.v2.AIzaSyAX0HnY39NesjoEpQU8gfHhh9FQPGR_q1U"
-    android:value="AIzaSyAX0HnY39NesjoEpQU8gfHhh9FQPGR_q1U"/>
+    android:name="com.google.android.maps.v2.API_KEY"
+    android:value="AIzaSyDfdpHW_wYy1N-BmhEhFIbBbUUYyxVawd4"/>
     
     <meta-data
     android:name="com.google.android.gms.version"
@@ -67,7 +67,10 @@
             android:name="ingsw.msdetector.TraceActivity"
             android:label="@string/trace">
         </activity>
-        
+         <activity
+            android:name="ingsw.msdetector.ListaFunghi"
+            android:label="@string/crea_scheda">
+        </activity>
     </application>
 
 </manifest>
